feat: adding endpoint for node operators to block certain peers from joining the node
